Remove old authorization logic, fixes
